--- a/css.css
+++ b/css.css
@@ -47,4 +47,10 @@ h1 {
 .row .screen span {
     justify-self:right;
 }
+.zero {
+    font-size:32px;
+    display:none;
+    justify-content: center;
+    align-items: center;
+}
 
